<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/movie_image1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/color1"
        android:contentDescription="@string/title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/movie_image1"
        app:layout_constraintStart_toStartOf="@+id/movie_image1"
        app:layout_constraintTop_toBottomOf="@+id/movie_image1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="@+id/movie_image1"
        app:layout_constraintStart_toStartOf="@+id/movie_image1"
        app:layout_constraintTop_toBottomOf="@+id/movie_title1" />

    <ImageView
        android:id="@+id/movie_image2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="@color/color2"
        android:contentDescription="@string/title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/movie_image2"
        app:layout_constraintStart_toStartOf="@+id/movie_image2"
        app:layout_constraintTop_toBottomOf="@+id/movie_image2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="@+id/movie_image2"
        app:layout_constraintStart_toStartOf="@+id/movie_image2"
        app:layout_constraintTop_toBottomOf="@+id/movie_title2" />

    <ImageView
        android:id="@+id/movie_image3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/color3"
        android:contentDescription="@string/title3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/movie_image3"
        app:layout_constraintStart_toStartOf="@+id/movie_image3"
        app:layout_constraintTop_toBottomOf="@+id/movie_image3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="@+id/movie_image3"
        app:layout_constraintStart_toStartOf="@+id/movie_image3"
        app:layout_constraintTop_toBottomOf="@+id/movie_title3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickImplicit"
        android:text="@string/invite"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>